log/build_2026-05-07_09-06-25/planning/stderr.log
  File "/home/cc/ee106a/sp26/class/ee106a-aca/Duplo_Project/install/planning/lib/python3.10/site-packages/launch/duplo.launch.py", line 96
    brick_detection_node
    ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

